--- a/templates/fullscreenmodal.mustache
+++ b/templates/fullscreenmodal.mustache
@@ -14,7 +14,7 @@ along with Moodle. If not, see
 <http : //www.gnu.org/licenses />.
 }}
 {{!
-@template mod_interactivevideo/reporttable
+@template mod_interactivevideo/fullscreenmodal
 Report table.
 Example context (json):
 {
@@ -42,18 +42,7 @@ Example context (json):
                 </button>
             </div>
             <div class="modal-body p-0 position-relative" data-region="body">
-                <div class="position-absolute w-100 h-100 no-pointer bg-transparent"
-                     id="background-loading"
-                     style="pointer-events: none">
-                    <div class="d-flex h-100 align-items-center justify-content-center">
-                        <div class="spinner-border text-danger"
-                             style="width: 3rem;
-                                    height: 3rem"
-                             role="status">
-                            <span class="sr-only">Loading...</span>
-                        </div>
-                    </div>
-                </div>
+                {{> mod_interactivevideo/backgroundloading}}
                 {{$body}}
                 {{{body}}}
                 {{/body}}
