--- a/templates/pagenav.mustache
+++ b/templates/pagenav.mustache
@@ -25,8 +25,23 @@ Example context (json):
            title="{{#str}}backtocourse,mod_interactivevideo{{/str}}"
            data{{bs}}-placement="bottom"
            data{{bs}}-toggle="tooltip">
+            <span class="sr-only">{{#str}}backtocourse,mod_interactivevideo{{/str}}</span>
             <i class="{{#darkmode}}text-white{{/darkmode}} bi bi-chevron-left fs-25px"></i>
         </a>
+        {{#hascourseindex}}
+        <span
+            class="rotatex-360 btn btn-sm iv-mr-2 border-0 p-0 iv-ml-2"
+            data-toggler="drawers"
+            data-action="toggle"
+            data-target="theme_boost-drawers-courseindex"
+            data{{bs}}-toggle="tooltip"
+            data{{bs}}-placement="bottom"
+            title="{{#str}}opendrawerindex, core{{/str}}"
+        >
+            <span class="sr-only">{{#str}}opendrawerindex, core{{/str}}</span>
+            <i class="bi bi-list-ul fs-25px {{#darkmode}}text-white{{/darkmode}}"></i>
+        </span>
+        {{/hascourseindex}}
         {{#manualcompletion}}
         {{{completion}}}
         {{/manualcompletion}}
@@ -41,6 +56,7 @@ Example context (json):
                 data{{bs}}-toggle="dropdown"
                 aria-haspopup="true"
                 aria-expanded="false">
+            <span class="sr-only">{{#str}}todo,mod_interactivevideo{{/str}}</span>
             <i class="fs-25px bi bi-check-circle{{#completed}}-fill{{/completed}} {{#darkmode}}{{^completed}}text-white{{/completed}}{{/darkmode}} {{#completedpass}}text-success{{/completedpass}}{{#completedfail}}text-danger{{/completedfail}}"></i>
         </button>
         <div class="dropdown-menu dropdown-menu-left px-2"
@@ -55,38 +71,50 @@ Example context (json):
     <a href="{{{viewurl}}}"
        title="{{#str}}play,mod_interactivevideo{{/str}}"
        data{{bs}}-toggle="tooltip" data{{bs}}-placement="bottom"
-       class="btn px-1 btn-sm iv-mr-2 border-0 btn-hover"><i class="bi bi-play-circle fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
+       class="btn px-1 btn-sm iv-mr-2 border-0 btn-hover">
+       <span class="sr-only">{{#str}}play,mod_interactivevideo{{/str}}</span>
+       <i class="bi bi-play-circle fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
 {{/viewurl}}
 {{#interactionsurl}}
 <a href="{{{interactionsurl}}}"
    title="{{#str}}interactions,mod_interactivevideo{{/str}}"
    data{{bs}}-toggle="tooltip" data{{bs}}-placement="bottom"
-   class="btn px-1 btn-sm iv-mr-2 border-0 btn-hover"><i class="bi bi-bullseye fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
+   class="btn px-1 btn-sm iv-mr-2 border-0 btn-hover">
+    <span class="sr-only">{{#str}}interactions,mod_interactivevideo{{/str}}</span>
+   <i class="bi bi-bullseye fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
 {{/interactionsurl}}
 {{#reporturl}}
 <a href="{{{reporturl}}}"
    title="{{#str}}report,mod_interactivevideo{{/str}}"
    data{{bs}}-toggle="tooltip" data{{bs}}-placement="bottom"
-   class="btn px-1 btn-sm iv-mr-2 border-0 btn-hover"><i class="bi bi-table fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
+   class="btn px-1 btn-sm iv-mr-2 border-0 btn-hover">
+    <span class="sr-only">{{#str}}report,mod_interactivevideo{{/str}}</span>
+   <i class="bi bi-table fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
 {{/reporturl}}
 {{#settingurl}}
 <a href="javascript:void(0)" data-href="{{{settingurl}}}" data-cmid="{{cmid}}" data-courseid="{{courseid}}"
     data-contextid="{{contextid}}" data-interaction="{{instance}}" data-origin="navbar"
    title="{{#str}}settingstooltip, mod_interactivevideo{{/str}}"
    data{{bs}}-toggle="tooltip" data{{bs}}-html="true" data{{bs}}-placement="bottom"
-   class="btn px-1 btn-sm iv-mr-2 border-0 iv_quickform btn-hover"><i class="bi bi-gear fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
+   class="btn px-1 btn-sm iv-mr-2 border-0 iv_quickform btn-hover">
+    <span class="sr-only">{{#str}}settingstooltip, mod_interactivevideo{{/str}}</span>
+   <i class="bi bi-gear fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
 {{/settingurl}}
 {{#backupurl}}
 <a href="{{{backupurl}}}"
    title="{{#str}}backup{{/str}}"
    data{{bs}}-toggle="tooltip" data{{bs}}-placement="bottom"
-   class="btn px-1 btn-sm iv-mr-2 border-0 btn-hover"><i class="bi bi-cloud-arrow-up fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
+   class="btn px-1 btn-sm iv-mr-2 border-0 btn-hover">
+    <span class="sr-only">{{#str}}backup{{/str}}</span>
+   <i class="bi bi-cloud-arrow-up fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
 {{/backupurl}}
 {{#restoreurl}}
 <a href="{{{restoreurl}}}"
    title="{{#str}}restore{{/str}}"
    data{{bs}}-toggle="tooltip" data{{bs}}-placement="bottom"
-   class="btn px-1 btn-sm iv-mr-2 border-0 btn-hover"><i class="bi bi-cloud-arrow-down fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
+   class="btn px-1 btn-sm iv-mr-2 border-0 btn-hover">
+    <span class="sr-only">{{#str}}restore{{/str}}</span>
+   <i class="bi bi-cloud-arrow-down fs-25px {{#darkmode}}text-white{{/darkmode}} "></i></a>
 {{/restoreurl}}
 <span class="iv-mr-1">
     {{#useravatar}}
