--- a/templates/playermodal.mustache
+++ b/templates/playermodal.mustache
@@ -56,17 +56,7 @@ Example context (json):
                 </div>
             </div>
             <div class="modal-body p-0 position-relative overflow-hidden">
-                <div class="position-absolute w-100 h-100 no-pointer bg-transparent"
-                    id="background-loading">
-                    <div class="d-flex h-100 align-items-center justify-content-center">
-                        <div class="spinner-border text-danger"
-                            style="width: 3rem;
-                                    height: 3rem"
-                            role="status">
-                            <span class="sr-only">Loading...</span>
-                        </div>
-                    </div>
-                </div>
+                {{> mod_interactivevideo/backgroundloading}}
                 <iframe id="ivplayer"
                         src="{{root}}/mod/interactivevideo/view.php?id={{id}}&embed=1"
                         class="w-100 position-absolute h-100 border-0"
